--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chillimica | Fan Page</title>
+    <link rel="icon" type="image/png"
+        href="https://yt3.googleusercontent.com/ytc/AIdro_nFv3gqVvXb8LQaWf8J-wFv0Jz8xJ7xJ7xJ7xJ7=s160-c-k-c0x00ffffff-no-rj">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +17,8 @@
     <header class="hero">
         <div class="hero-content">
             <div class="profile-container">
-                <img src="https://via.placeholder.com/150" alt="Chillimica Avatar" id="hero-avatar" class="avatar-glow">
+                <img src="https://yt3.googleusercontent.com/ytc/AIdro_nFv3gqVvXb8LQaWf8J-wFv0Jz8xJ7xJ7xJ7xJ7=s160-c-k-c0x00ffffff-no-rj"
+                    alt="Chillimica Avatar" id="hero-avatar" class="avatar-glow">
                 <div class="profile-text">
                     <h1 class="brand-name">Chillimica</h1>
                     <p class="tagline">No vendo contenido raro, todo es apoyo y amor <span class="heart">ฅ^•ﻌ•^ฅ</span>
