--- a/index.html
+++ b/index.html
@@ -6,85 +6,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chillimica | Fan Page</title>
     <link rel="icon" type="image/png"
-        href="https://yt3.googleusercontent.com/ytc/AIdro_nFv3gqVvXb8LQaWf8J-wFv0Jz8xJ7xJ7xJ7xJ7=s160-c-k-c0x00ffffff-no-rj">
+        href="https://yt3.googleusercontent.com/DYwV33MwJeellbSB0bqFYLlNjFI4ZUYAnbp780GLztlcNOterlv9vV5U67Ml920ko_dtUqpywA">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
-    <!-- Hero Section -->
-    <header class="hero">
-        <div class="hero-content">
-            <div class="profile-container">
-                <img src="https://yt3.googleusercontent.com/DYwV33MwJeellbSB0bqFYLlNjFI4ZUYAnbp780GLztlcNOterlv9vV5U67Ml920ko_dtUqpywA"
-                    alt="Chillimica Avatar" id="hero-avatar" class="avatar-glow">
-                <div class="profile-text">
-                    <h1 class="brand-name">Chillimica</h1>
-                    <p class="tagline">No vendo contenido raro, todo es apoyo y amor <span class="heart">ฅ^•ﻌ•^ฅ</span>
-                    </p>
-                    <div class="social-links-hero">
-                        <!-- Social links will be inserted here or kept static -->
-                        <a href="https://youtube.com/@chillimica13" target="_blank" class="social-btn youtube"><svg
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z">
-                                </path>
-                            </svg></a>
-                        <a href="https://instagram.com/chillimica" target="_blank" class="social-btn instagram"><svg
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M7.0301.084c-1.2768.0602-2.1487.264-2.911.5634-.7888.3075-1.4575.72-2.1228 1.3877-.6652.6677-1.075 1.3368-1.3802 2.127-.2954.7638-.4956 1.6365-.552 2.914-.0564 1.2775-.0689 1.6882-.0626 4.947.0062 3.2586.0206 3.6671.0825 4.9473.061 1.2765.264 2.1482.5635 2.9107.308.7889.72 1.4573 1.388 2.1228.6679.6655 1.3365 1.0743 2.1285 1.38.7632.295 1.6361.4961 2.9134.552 1.2773.056 1.6884.069 4.9462.0627 3.2578-.0062 3.668-.0207 4.9478-.0814 1.28-.0607 2.147-.2652 2.9098-.5633.7889-.3086 1.4578-.72 2.1228-1.3881.665-.6682 1.0745-1.3378 1.3795-2.1284.2957-.7632.4966-1.636.552-2.9124.056-1.2809.0692-1.6898.063-4.948-.0063-3.2583-.021-3.6668-.0817-4.9465-.0607-1.2797-.264-2.1487-.5633-2.9117-.3084-.7889-.72-1.4568-1.3876-2.1228C21.2982 1.33 20.628.9208 19.8378.6165 19.074.321 18.2017.1197 16.9244.0645 15.6471.0093 15.236-.005 11.977.0014 8.718.0076 8.31.0215 7.0301.0839m.1402 21.6932c-1.17-.0509-1.8053-.2453-2.2287-.408-.5606-.216-.96-.4771-1.3819-.895-.422-.4178-.6811-.8186-.9-1.378-.1644-.4234-.3624-1.058-.4171-2.228-.0595-1.2645-.072-1.6442-.079-4.848-.007-3.2037.0053-3.583.0607-4.848.05-1.169.2456-1.805.408-2.2282.216-.5613.4762-.96.895-1.3816.4188-.4217.8184-.6814 1.3783-.9003.423-.1651 1.0575-.3614 2.227-.4171 1.2655-.06 1.6447-.072 4.848-.079 3.2033-.007 3.5835.005 4.8495.0608 1.169.0508 1.8053.2445 2.228.408.5608.216.96.4754 1.3816.895.4217.4194.6816.8176.9005 1.3787.1653.4217.3617 1.056.4169 2.2263.0602 1.2655.0739 1.645.0796 4.848.0058 3.203-.0055 3.5834-.061 4.848-.051 1.17-.245 1.8055-.408 2.2294-.216.5604-.4763.96-.8954 1.3814-.419.4215-.8181.6811-1.3783.9-.4224.1649-1.0577.3617-2.2262.4174-1.2656.0595-1.6448.072-4.8493.079-3.2045.007-3.5825-.006-4.848-.0608M16.953 5.5864A1.44 1.44 0 1 0 18.39 4.144a1.44 1.44 0 0 0-1.437 1.4424M5.8385 12.012c.0067 3.4032 2.7706 6.1557 6.173 6.1493 3.4026-.0065 6.157-2.7701 6.1506-6.1733-.0065-3.4032-2.771-6.1565-6.174-6.1498-3.403.0067-6.156 2.771-6.1496 6.1738M8 12.0077a4 4 0 1 1 4.008 3.9921A3.9996 3.9996 0 0 1 8 12.0077">
-                                </path>
-                            </svg></a>
-                        <a href="https://twitch.tv/chillimica" target="_blank" class="social-btn twitch"><svg
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z">
-                                </path>
-                            </svg></a>
-                        <a href="https://discord.gg/nefbUUgWYr" target="_blank" class="social-btn discord"><svg
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z">
-                                </path>
-                            </svg></a>
-                        <a href="https://tiktok.com/@chillimica" target="_blank" class="social-btn tiktok"><svg
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z">
-                                </path>
-                            </svg></a>
-                    </div>
-                    <div class="support-actions">
-                        <a href="https://paypal.me/chillimica" target="_blank" class="btn btn-primary">Apoyar en
-                            Paypal</a>
-                        <a href="https://cafecito.app/chillimica" target="_blank" class="btn btn-secondary">Invitar un
-                            Cafecito</a>
-                    </div>
-                </div>
-            </div>
+    <!-- Navbar -->
+    <nav class="top-nav">
+        <div class="nav-brand">Chillimica Space</div>
+        <div class="nav-links">
+            <a href="#" class="active">🏠 Inicio</a>
         </div>
-    </header>
+    </nav>
 
-    <!-- Latest Videos Grid -->
-    <main class="content-wrapper">
-        <section class="video-section">
-            <h2 class="section-title">Últimos Videos</h2>
-            <div id="video-grid" class="video-grid">
-                <!-- Videos injected via JS -->
-                <div class="loading-state">
-                    <div class="spinner"></div>
-                    <p>Buscando videos...</p>
+    <div class="main-glass-container">
+        <!-- Hero Section inside Glass -->
+        <header class="hero">
+            <div class="hero-content">
+                <div class="profile-container">
+                    <img src="https://yt3.googleusercontent.com/DYwV33MwJeellbSB0bqFYLlNjFI4ZUYAnbp780GLztlcNOterlv9vV5U67Ml920ko_dtUqpywA"
+                        alt="Chillimica Avatar" id="hero-avatar" class="avatar-glow">
+                    <div class="profile-text">
+                        <h1 class="brand-name">Chillimica</h1>
+                        <p class="tagline">No vendo contenido raro, todo es apoyo y amor <span
+                                class="heart">ฅ^•ﻌ•^ฅ</span></p>
+                        <div class="social-links-hero">
+                            <a href="https://www.youtube.com/@chillimica13" target="_blank" class="social-btn yt"
+                                title="YouTube"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24" fill="currentColor">
+                                    <path
+                                        d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z" />
+                                </svg></a>
+                            <a href="https://instagram.com/chillimica" target="_blank" class="social-btn ig"
+                                title="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24" fill="currentColor">
+                                    <path
+                                        d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M19,5A1,1 0 0,1 20,6A1,1 0 0,1 19,7A1,1 0 0,1 18,6A1,1 0 0,1 19,5" />
+                                </svg></a>
+                            <a href="https://www.facebook.com/people/Chillimica/100090080442879/" target="_blank"
+                                class="social-btn fb" title="Facebook"><svg xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                    <path
+                                        d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+                                </svg></a>
+                            <a href="https://www.tiktok.com/@chillimica" target="_blank" class="social-btn tiktok"
+                                title="TikTok"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24" fill="currentColor">
+                                    <path
+                                        d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93v6.14c0 3.48-2.63 5.76-5.4 5.76-3.07 0-5.31-2.43-5.31-5.76 0-3.32 2.29-5.76 5.31-5.76.5 0 1 .08 1.48.24v4.2c-.22-.09-.45-.14-.69-.14-1.15 0-2.09.94-2.09 2.09s.94 2.09 2.09 2.09c1.15 0 2.09-.94 2.09-2.09V6.02h-1.48V.02z" />
+                                </svg></a>
+                            <a href="https://twitch.tv/chillimica" target="_blank" class="social-btn twitch"
+                                title="Twitch"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24" fill="currentColor">
+                                    <path
+                                        d="M2.149 0l-1.612 4.119v16.836h5.731v3.045h3.224l3.045-3.045h4.657l6.269-6.269v-14.686h-21.314zm19.164 13.612l-3.582 3.582h-5.731l-3.045 3.045v-3.045h-4.836v-15.045h17.194v11.463zm-3.582-7.343v6.262h-2.149v-6.262h2.149zm-5.731 0v6.262h-2.149v-6.262h2.149z" />
+                                </svg></a>
+                        </div>
+                        <div class="support-links-hero">
+                            <a href="https://paypal.me/chillimica" target="_blank" class="btn-support primary">P
+                                Paypal</a>
+                            <a href="https://cafecito.app/chillimica" target="_blank" class="btn-support secondary">☕
+                                Cafesito</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </header>
+
+        <!-- Latest Videos Grid -->
+        <main class="content-wrapper">
+            <section class="video-section">
+                <!-- <h2 class="section-title">Últimos Videos</h2> -->
+                <div id="video-grid" class="video-grid">
+                    <!-- Videos injected via JS -->
+                    <div class="loading-state">
+                        <div class="spinner"></div>
+                        <p>Buscando videos...</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Fan Art Gallery -->
+            <section class="gallery-section">
+                <h2 class="section-title">Fanarts</h2>
+                <div class="fan-art-grid">
+                    <!-- Fan Arts injected via JS -->
+                    <div class="loading-state">
+                        <p>Cargando galería...</p>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div> <!-- End Main Glass Container -->
 
     <footer>
         <p>Hecho con ❤️ para Chillimica. Fan page no oficial.</p>
     </footer>
 
+    <script src="fanart_data.js"></script>
     <script src="script.js"></script>
 </body>
 
